# logic-inference-system

./: CMakeLists.txt  README.md  main.cc  main.cpp
src/: CMakeLists.txt  Sentence.h  input.cc  input.cpp  input.h  knowledge_base.cc  knowledge_base.h  knowledge_base_index.h  literal.h  multi_node.h  node.h  output.cc  output.h  predicate.cc  predicate.h  query.cpp  query.h  sentence.cc  sentence.h  term.cc  term.h
test/: CMakeLists.txt  input_test.cc  input_test.cpp  knowledge_base_test.cc  literal_test.cc  predicate_test.cc  sample_test.cc  sentence_test.cc  term_test.cc
test/lib/gtest-1.7.0/cmake/: internal_utils.cmake
test/lib/gtest-1.7.0/include/gtest/: gtest-printers.h  gtest.h
test/lib/gtest-1.7.0/samples/: sample3_unittest.cc
test/lib/gtest-1.7.0/scripts/: gen_gtest_pred_impl.py  upload.py
test/lib/gtest-1.7.0/src/: gtest-death-test.cc  gtest-port.cc  gtest-printers.cc
test/lib/gtest-1.7.0/test/: gtest-listener_test.cc  gtest-port_test.cc  gtest-unittest-api_test.cc  gtest_pred_impl_unittest.cc
test_files/: input_10.txt  input_11.txt  input_12.txt  input_13.txt  input_14.txt  input_15.txt  input_16.txt  input_17.txt  input_18.txt  input_19.txt  input_2.txt  input_20.txt  input_21.txt  input_22.txt  input_23.txt  input_24.txt  input_25.txt  input_26.txt  input_27.txt  input_28.txt  input_29.txt  input_3.txt  input_30.txt  input_31.txt  input_32.txt  input_33.txt  input_34.txt  input_35.txt  input_36.txt  input_37.txt  input_38.txt  input_39.txt  input_4.txt  input_40.txt  input_41.txt  input_42.txt  input_43.txt  input_44.txt  input_45.txt  input_46.txt  (+8 more)
(+4 files in other folders)
